fix: ensure inline code blocks overflow correctly

--- a/static/style.css
+++ b/static/style.css
@@ -161,6 +161,11 @@ code {
   margin-right: 0.5rem;
   font-family: monospace;
   display: inline-block;
+  max-width: 100%;
+  overflow-x: auto;
+  position: relative;
+  top: 4px;
+  left: 4px;
 }
 
 .code *, code * {
